--- a/bio.css
+++ b/bio.css
@@ -1,6 +1,7 @@
 .box-wrapper {
     background: linear-gradient(70deg, #75c5ea 0%, #4C3B89 100%);
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     width: 100vw;
     position: absolute;
     display: flex;
